# Cue-Engine

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODING_RULES.md  Cue Engine.slnx  README.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
App/: App.cpp  CMakeLists.txt
Core/: CMakeLists.txt  Core.cpp  Core.h
Core/public/: Result.h
Editor/: CMakeLists.txt  Editor.cpp
Engine/: Engine.cpp  Engine.h
GraphicsCore/: CMakeLists.txt  GraphicsCore.h
Platform/: CMakeLists.txt  Platform.cpp  Platform.h
Platform/win/: CMakeLists.txt  pch.h  win_platform.cpp  win_platform.h
Platform/win/private/: WinApp.cpp  WinApp.h
UnitTest/: UnitTest.vcxproj
projects/App/: CMakeLists.txt
projects/Base/: CMakeLists.txt
projects/Base/include/: Assert.h  CueAssert.h  Result.h
projects/Core/: CMakeLists.txt  Core.cpp  Core.h
projects/Core/public/: JobSystem.h  LogAssert.h  Logger.h  Pool.h  Result.h
projects/Core/public/IO/: IFileSystem.h  Path.cpp  Path.h
projects/Core/public/Threading/: IThread.h  IThreadFactory.h  StopToken.h
projects/Core/public/Time/: FrameCounter.h  IClock.h  IWaiter.h  Timer.h
projects/Editor/: CMakeLists.txt  Editor.cpp
projects/Engine/: CMakeLists.txt  Configuration.h  Engine.cpp  Engine.h
projects/Engine/frame/: FrameController.cpp  FrameController.h
projects/GraphicsCore/: BackendFactory.h  CMakeLists.txt  FrameGraph.cpp  FrameGraph.h  GpuCommand.cpp  GpuCommand.h  GpuPipeline.cpp  GpuPipeline.h  GraphicsCore.cpp  GraphicsCore.h  ResourceHandle.h
projects/GraphicsCore/d3d12/: CMakeLists.txt  d3d12_backend.cpp  d3d12_backend.h
projects/GraphicsCore/d3d12/private/: BufferManager.h  DX12GpuCommand.cpp  DX12GpuCommand.h  GpuBuffer.h  GpuCommand.cpp  GpuCommand.h  RenderDevice.cpp  RenderDevice.h  stdafx.cpp  stdafx.h
projects/Math/: CMakeLists.txt  CueMath.cpp  CueMath.h  Math.cpp  TimeUnit.h  math_pch.cpp  math_pch.h
projects/Platform/: CMakeLists.txt  Platform.cpp  Platform.h  PlatformFactory.h
projects/Platform/Time/: Clock.h
projects/Platform/win/: CMakeLists.txt  win_pch.cpp  win_pch.h  win_platform.cpp  win_platform.h
projects/Platform/win/private/: WinApp.cpp  WinApp.h  WinFileSystem.cpp  WinFileSystem.h  WinQpcClock.cpp  WinQpcClock.h  WinThread.cpp  WinThread.h  WinThreadFactory.cpp  WinThreadFactory.h  WinWaiter.cpp  WinWaiter.h
scripts/: codex_build.ps1
